<resources>
    <string name="app_name">UniCycle</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="biweekly">Bi-Weekly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="intervals">Intervals</string>
    <string name="intervalText">Income To View</string>
    <string name="allowance">Allowance</string>
    <string name="dollarSign">$</string>
    <string name="upcomingValue">Upcoming payments for the month</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="savedText">Saved</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="frequency">Frequency</string>
    <string name="date">Date</string>
    <string name="entity">Entity</string>
    <string name="color">Color</string>
    <string-array name="frequency_options">
        <item>One-Time</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <array name="pay_frequency_entries">
        <item>Monthly</item>
        <item>Bi-Weekly</item>
        <item>Weekly</item>
    </array>
    <array name="pay_frequency_values">
        <item>12</item>
        <item>26</item>
        <item>52</item>
    </array>
    <string name="title_activity_expense_overview">ExpenseOverview</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="oneTimeHeadline">One-time expenses in the last month</string>
    <string name="recurringHeadline">Recurring expenses</string>
    <string name="overview">Overview</string>
    <string name="properties">Properties</string>
    <string name="osap">OSAP</string>
    <string name="settings">Settings</string>
    <string name="income">Income</string>
    <string name="savings_goal">Savings Goal</string>
    <string name="monthly">Monthly</string>
    <string name="total_income">Total Income</string>
    <string name="disposable_income">Disposable Income</string>
    <string name="update">Update</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>