<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expense_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C681C784"
        android:padding="10dp">

        <ImageView
            android:id="@+id/expenseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Icon representing the expense that a user can specify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/expense_icon" />

        <TextView
            android:id="@+id/expenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/expense_name"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/expenseIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/expense_amount"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/amountText"
            app:layout_constraintTop_toBottomOf="@+id/expenseName" />

        <TextView
            android:id="@+id/expenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/expense_date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/dateText"
            app:layout_constraintTop_toBottomOf="@+id/expenseName" />

        <TextView
            android:id="@+id/amountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/amount"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/expenseName"
            app:layout_constraintTop_toBottomOf="@+id/expenseName" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/expenseAmount"
            app:layout_constraintTop_toBottomOf="@+id/expenseName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>