<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recurring_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9FFFD54F"
        android:padding="10dp">

        <TextView
            android:id="@+id/recurringFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/frequencyText"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/recurringIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/recurring_icon" />

        <TextView
            android:id="@+id/recurringName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/expense_name"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/recurringIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recurringAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/expense_amount"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/amountText"
            app:layout_constraintTop_toBottomOf="@+id/recurringName" />

        <TextView
            android:id="@+id/recurringDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/expense_date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/dateText"
            app:layout_constraintTop_toBottomOf="@+id/recurringName" />

        <TextView
            android:id="@+id/amountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/amount"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/recurringName"
            app:layout_constraintTop_toBottomOf="@+id/recurringName" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/recurringAmount"
            app:layout_constraintTop_toBottomOf="@+id/recurringName" />

        <TextView
            android:id="@+id/frequencyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Frequency"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recurringName"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>