<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Properties">

    <EditText
        android:id="@+id/incomeValue"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="textPersonName|numberDecimal"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeText" />

    <EditText
        android:id="@+id/rrspValue"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rrspText" />

    <EditText
        android:id="@+id/disposableIncomeValue"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totIncomeValue"
        app:layout_constraintTop_toBottomOf="@+id/dispIncomeText" />

    <EditText
        android:id="@+id/totIncomeValue"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totIncomeText" />

    <EditText
        android:id="@+id/cppValue"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cppText" />

    <TextView
        android:id="@+id/incomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/income"
        android:textColor="#8bc34a"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eiValue"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cppValue"
        app:layout_constraintTop_toBottomOf="@+id/eiText" />

    <TextView
        android:id="@+id/cppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="CPP"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeValue" />

    <TextView
        android:id="@+id/eiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="EI"
        android:textColor="#8bc34a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/cppText"
        app:layout_constraintTop_toBottomOf="@+id/incomeValue" />

    <TextView
        android:id="@+id/rrspText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="RRSP"
        android:textColor="#8bc34a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cppValue" />

    <TextView
        android:id="@+id/totIncomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/total_income"
        android:textColor="#8bc34a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rrspValue" />

    <TextView
        android:id="@+id/dispIncomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/disposable_income"
        android:textColor="#8bc34a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toEndOf="@+id/totIncomeText"
        app:layout_constraintTop_toBottomOf="@+id/rrspValue" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="96dp"
        android:layout_height="57dp"
        android:backgroundTint="#8bc34a"
        android:onClick="updateValues"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totIncomeValue"
        app:layout_constraintVertical_bias="0.296" />

</androidx.constraintlayout.widget.ConstraintLayout>